--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                     <div class="movies-container"></div>        
                 </div>
             </div>
+            <a href="https://github.com/chenjen/lab8.git">GitHub Repository</a>
 
         </div> <!-- .container -->
 
@@ -58,7 +59,6 @@
                 </p>
 
             </div>
-
             <!-- cart item template -->
             <div class="cart-item-template cart-item row">
                 <div class="col-xs-10">
@@ -70,7 +70,7 @@
                     <p>$<span class="price"></span></p>
                 </div>
             </div>
-
+            
         </div> <!-- .templates -->
         
         <script src="lib/jquery-2.0.3/jquery-2.0.3.min.js"></script>
